// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsPage should render a component when has data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Apps Management
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="searchTerm"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App or Developer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="companyName"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Company Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="id"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App Id
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                In Public AppMarket
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Public
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Private
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Integration or AC Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Integration
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    AC App
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Publicly Listed
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Listed
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Development
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11"
        >
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
                type="button"
              >
                Download CSV
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="el-mb11"
        >
          <h2
            class="el-subtitle"
          >
            Total Apps
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            1
          </p>
          <div
            class="el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="10"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                App Name
              </div>
              <div
                class="el-table-header"
              >
                AppId
              </div>
              <div
                class="el-table-header"
              >
                Summary
              </div>
              <div
                class="el-table-header"
              >
                Developer Name
              </div>
              <div
                class="el-table-header"
              >
                Listed
              </div>
              <div
                class="el-table-header"
              >
                Integration
              </div>
              <div
                class="el-table-header"
              >
                Featured
              </div>
              <div
                class="el-table-header"
              >
                Created
              </div>
              <div
                class="el-table-header"
              >
                Publicly Listed
              </div>
              <div
                class="el-table-header"
              >
                Public
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="App Name"
                  >
                    Reapit Insights
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="AppId"
                  >
                    f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Summary"
                  >
                    Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Developer Name"
                  >
                    Reapit Ltd Internal
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Listed"
                  >
                    <span
                      class="el-intent-success el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Integration"
                  >
                    <span
                      class="el-intent-danger el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Featured"
                  >
                    <span
                      class="el-intent-danger el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Created"
                  >
                    04 Mar 2021 09:37
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Publicly Listed"
                  >
                    -
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Public"
                  >
                    <span
                      class="el-intent-danger el-icon"
                    >
                      <svg />
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-secondary el-button"
                      >
                        View in AppMarket
                        <div
                          class="el-button-loader"
                        />
                      </button>
                      <button
                        class="el-intent-secondary el-button"
                      >
                        View in DevPortal
                        <div
                          class="el-button-loader"
                        />
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        Check AWS Only
                        <div
                          class="el-button-loader"
                        />
                      </button>
                      <button
                        class="el-intent-danger el-button"
                        type="button"
                      >
                        Delete
                        <div
                          class="el-button-loader"
                        />
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        Toggle Subscription
                        <div
                          class="el-button-loader"
                        />
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        Togggle Featured
                        <div
                          class="el-button-loader"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Apps Management
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App or Developer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="id"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App Id
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              In Public AppMarket
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Public
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Private
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Integration or AC Enabled
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Integration
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  AC App
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Publicly Listed
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Listed
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Development
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11"
      >
        <div
          class="el-button-group"
        >
          <div
            class="el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              Download CSV
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="el-mb11"
      >
        <h2
          class="el-subtitle"
        >
          Total Apps
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          1
        </p>
        <div
          class="el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="10"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              App Name
            </div>
            <div
              class="el-table-header"
            >
              AppId
            </div>
            <div
              class="el-table-header"
            >
              Summary
            </div>
            <div
              class="el-table-header"
            >
              Developer Name
            </div>
            <div
              class="el-table-header"
            >
              Listed
            </div>
            <div
              class="el-table-header"
            >
              Integration
            </div>
            <div
              class="el-table-header"
            >
              Featured
            </div>
            <div
              class="el-table-header"
            >
              Created
            </div>
            <div
              class="el-table-header"
            >
              Publicly Listed
            </div>
            <div
              class="el-table-header"
            >
              Public
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="App Name"
                >
                  Reapit Insights
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="AppId"
                >
                  f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Summary"
                >
                  Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Developer Name"
                >
                  Reapit Ltd Internal
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Listed"
                >
                  <span
                    class="el-intent-success el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Integration"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Featured"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Created"
                >
                  04 Mar 2021 09:37
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Publicly Listed"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Public"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                    >
                      View in AppMarket
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-secondary el-button"
                    >
                      View in DevPortal
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Check AWS Only
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-danger el-button"
                      type="button"
                    >
                      Delete
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Toggle Subscription
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Togggle Featured
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should render a component when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Apps Management
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="searchTerm"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App or Developer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="companyName"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Company Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="id"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App Id
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                In Public AppMarket
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Public
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Private
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Integration or AC Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Integration
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    AC App
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Publicly Listed
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Listed
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Development
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Apps Management
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App or Developer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="id"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App Id
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              In Public AppMarket
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Public
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Private
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Integration or AC Enabled
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Integration
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  AC App
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Publicly Listed
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Listed
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Development
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
